# whaleit

./: .env.example  .env.web.example  .gitignore  AGENTS.md  CLA.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  ROADMAP.md  TRADEMARKS.md  add_awaits_parser.py  add_awaits_v2.py  compose.dev.yml  compose.standalone.yml  compose.yaml  compose.yml  package.json  pnpm-lock.yaml
.claude/: CLAUDE.md
.github/: pull_request_template.md
.github/workflows/: docker-publish.yml  pr-check.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
addons/goal-progress-tracker/: CHANGELOG.md  README.md  (+2 more)
apps/tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
apps/tauri/icons/: icon.icns
apps/tauri/src/: events.rs  lib.rs  listeners.rs  main.rs  menu.rs  scheduler.rs  secret_store.rs  updater.rs
apps/tauri/src/commands/: account.rs  activity.rs  addon.rs  ai_chat.rs  ai_providers.rs  alternative_assets.rs  asset.rs  brokers_sync.rs  custom_provider.rs  device_enroll_service.rs  fire.rs  goal.rs  health.rs  limits.rs  market_data.rs  mod.rs  portfolio.rs  providers_settings.rs  secrets.rs  settings.rs  sync_crypto.rs  taxonomy.rs  utilities.rs  wealthfolio_connect.rs
apps/tauri/src/commands/device_sync/: engine.rs  mod.rs  snapshot.rs
apps/tauri/src/context/: ai_environment.rs  providers.rs  registry.rs
apps/tauri/src/domain_events/: planner.rs  queue_worker.rs  sink.rs
apps/tauri/src/services/: connect_service.rs
crates/storage-common/: Cargo.toml
crates/storage-common/src/: lib.rs
crates/storage-postgres/: Cargo.toml
crates/storage-postgres/migrations/20260101000000_initial_schema/: down.sql  up.sql
crates/storage-postgres/migrations/20260422000000_auth_users/: down.sql  up.sql
crates/storage-postgres/migrations/20260425000000_accounts_extend_types_and_balances/: down.sql  up.sql
crates/storage-postgres/migrations/20260501000000_transactions_initial/: down.sql  up.sql
crates/storage-postgres/migrations/20260501010000_transaction_csv_templates/: down.sql  up.sql
crates/storage-postgres/src/: errors.rs  lib.rs  schema.rs
crates/storage-postgres/src/accounts/: migration_tests.rs  mod.rs  model.rs  repository.rs  repository_tests.rs
crates/storage-postgres/src/activities/: mod.rs  model.rs  repository.rs
crates/storage-postgres/src/ai_chat/: mod.rs  model.rs  repository.rs
crates/storage-postgres/src/assets/: alternative_asset.rs  mod.rs  model.rs  repository.rs
crates/storage-postgres/src/custom_provider/: mod.rs  model.rs  repository.rs
crates/storage-postgres/src/db/: mod.rs
crates/storage-postgres/src/fx/: mod.rs  model.rs  repository.rs
crates/storage-postgres/src/goals/: mod.rs  model.rs  repository.rs
crates/storage-postgres/src/health/: mod.rs  model.rs  repository.rs
crates/storage-postgres/src/limits/: mod.rs  model.rs  repository.rs
crates/storage-postgres/src/market_data/: mod.rs  model.rs  quote_sync_state_repository.rs  repository.rs
crates/storage-postgres/src/portfolio/: mod.rs
crates/storage-postgres/src/portfolio/snapshot/: mod.rs  model.rs  repository.rs
crates/storage-postgres/src/portfolio/valuation/: mod.rs  model.rs  repository.rs
crates/storage-postgres/src/settings/: mod.rs  model.rs  repository.rs
crates/storage-postgres/src/sync/: app_sync.rs  engine_ports.rs  import_run.rs  mod.rs  platform.rs  state.rs
crates/storage-postgres/src/sync/app_sync/: repository.rs
crates/storage-postgres/src/taxonomies/: mod.rs  model.rs  repository.rs
crates/storage-postgres/src/transactions/: migration_tests.rs  mod.rs  model.rs  repository.rs  repository_tests.rs  templates_model.rs  templates_repository.rs
crates/storage-postgres/src/users/: mod.rs  model.rs  repository.rs
crates/storage-postgres/tests/: parity_tests.rs
crates/storage-sqlite/: Cargo.toml
crates/storage-sqlite/src/: errors.rs  lib.rs
crates/storage-sqlite/src/accounts/: model.rs  repository.rs
crates/storage-sqlite/src/activities/: model.rs  repository.rs
crates/storage-sqlite/src/ai_chat/: repository.rs
crates/storage-sqlite/src/assets/: alternative_repository.rs  model.rs  repository.rs
crates/storage-sqlite/src/custom_provider/: repository.rs
crates/storage-sqlite/src/db/: mod.rs  write_actor.rs
crates/storage-sqlite/src/fx/: repository.rs
crates/storage-sqlite/src/goals/: model.rs  repository.rs
crates/storage-sqlite/src/health/: model.rs  repository.rs
crates/storage-sqlite/src/limits/: model.rs  repository.rs
crates/storage-sqlite/src/market_data/: mod.rs  model.rs  quote_sync_state_repository.rs  repository.rs
crates/storage-sqlite/src/portfolio/snapshot/: mod.rs  model.rs  repository.rs
crates/storage-sqlite/src/portfolio/valuation/: mod.rs  model.rs  repository.rs
crates/storage-sqlite/src/settings/: mod.rs  repository.rs
crates/storage-sqlite/src/sync/: mod.rs
crates/storage-sqlite/src/sync/app_sync/: engine_ports.rs  outbox_models.rs  outbox_projector.rs  repository.rs
crates/storage-sqlite/src/sync/app_sync/adapters/: mod.rs
crates/storage-sqlite/src/sync/import_run/: model.rs  repository.rs
crates/storage-sqlite/src/sync/platform/: repository.rs
crates/storage-sqlite/src/sync/state/: mod.rs  model.rs  repository.rs
crates/storage-sqlite/src/taxonomies/: model.rs  repository.rs  sync.rs
docs/: changelog-import-refactor.md
e2e/: 00-auth-flow.spec.ts  11-accounts.spec.ts  README.md  helpers.ts
scripts/: prep-e2e.mjs  wait-for-both-servers-to-be-ready.sh
(+852 files in other folders)
