[package]
name = "whaleit-app"
version.workspace = true
edition.workspace = true
description = "Portfolio tracker"
authors = ["Aziz Fadil"]
license = "AGPL-3.0"
repository = ""

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.10", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
tauri-plugin-deep-link = "2"

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
appstore = []

[lib]
name = "whaleit_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-haptics = "2"
tauri-plugin-barcode-scanner = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }

[target.'cfg(target_os = "ios")'.dependencies]
tauri-plugin-web-auth = "1"
tauri-plugin-mobile-share = "0.1.2"
