[package]
name = "whaleit-storage-postgres"
version.workspace = true
edition.workspace = true
description = "PostgreSQL storage implementation for Whaleit"
authors = ["Aziz Fadil"]
license = "AGPL-3.0"

[features]
default = []

[dependencies]
# Internal crates
whaleit-core = { workspace = true }
whaleit-ai = { workspace = true }
whaleit-connect = { workspace = true }
whaleit-device-sync = { workspace = true }

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }

# Database (PostgreSQL/Diesel specific)
diesel = { workspace = true }
diesel-async = { workspace = true, features = ["postgres", "deadpool"] }
diesel_migrations = { workspace = true }
deadpool = { workspace = true }

[dev-dependencies]
# For parity tests
whaleit-storage-sqlite = { workspace = true }
tempfile = "3"
